# Research

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release_smoke.yml  release_verification.yml
backlog/: backlog.csv  backlog.yaml
configs/: calendar.yaml  capacity.yaml  costs.yaml  data_sources.yaml  features.yaml  labels.yaml  models.yaml  portfolio.yaml  preprocessing.yaml  project.yaml  reporting.yaml  runtime.yaml  splits.yaml  universe.yaml
configs/experiments/: exp_ablation_no_fundamentals.yaml  exp_baseline_linear.yaml  exp_cost_stress.yaml  exp_gbm_ranker.yaml
docs/: implementation_notes.md  release_checklist.md
docs/development/: commands.md  contribution_workflow.md  environment.md  local_setup.md  onboarding.md  project_structure.md  troubleshooting.md
docs/governance/: README.md  anti_leakage_review_checklist.md  demo_plan.md  experiment_and_rollback_policy.md  glossary.md  goals_and_business_questions.md  naming_and_versioning.md  phase_definition_of_done.md  raci.md  raw_data_immutability.md  unresolved_risks.md
docs/runbooks/: configured_adapter_environment.md  reproducible_local_runbook.md
docs/specs/: MASTER_SPEC.md  machine_spec.yaml
docs/status/: README.md  acceptance_coverage_map.yaml  implementation_status.yaml  lego_progress.md  lego_progress.yaml  quality_gates.md  spec_coverage_map.yaml  spec_gap_audit.md
pseudocode/: pipeline_pseudocode.md
schemas/: feature_registry.yaml  table_schemas.yaml
scripts/: bootstrap.ps1  run_release_smoke.py  verify_release_bundle.py
src/alpha_research/: __init__.py  __main__.py
tests/: conftest.py
tests/acceptance/: acceptance_tests.yaml
tests/helpers/: fakes.py  model_data.py  research_data.py  trading_data.py
tests/integration/: test_ablation_and_figures.py  test_acceptance_contracts.py  test_bootstrap_manifest.py  test_configured_adapter_ingest.py  test_configured_provider_contracts.py  test_configured_runtime_bundle.py  test_corporate_actions_ingest.py  test_costs_backtest_capacity.py  test_dataset_assembly.py  test_evaluation_reporting.py  test_feature_engine.py  test_fundamentals_ingest.py  test_fundamentals_qa.py  test_governance_artifacts.py  test_ingest_stage_runtime.py  test_label_engine.py  test_lego_progress_artifacts.py  test_market_ingest.py  test_market_qa.py  test_metamorphic_invariants.py  test_models_oof.py  test_pipeline_release.py  (+13 more)
(+97 files in other folders)
